--- a/src/containers/css/style.css
+++ b/src/containers/css/style.css
@@ -84,7 +84,7 @@ body {
   background-color: #fff !important
 }
 .right-panel > .adsImage {
-  height: 92%;
+  height: 72%;
   width: 100%
 }
 #wrapper:fullscreen {
@@ -101,7 +101,7 @@ body {
   /* background-color: #000 */
 }
 #wrapper:fullscreen .right-panel > .adsImage {
-  height: 100%;
+  height: 75%;
   width: 100%
 }
 #wrapper:fullscreen .full-screen-btn{
@@ -144,4 +144,32 @@ body {
   font-size: 20px;
   font-weight: 500;
   /* line-height: 30px; */
+}
+.current-serving {
+  background-color: #FFF;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+  padding-bottom: 10px;
+  padding-top: 25px;
+}
+#wrapper:fullscreen .current-serving {
+}
+.current-serving > .bookingNo{
+  font-size: 160px;
+  color: #FF5F0F;
+  line-height: 140px
+  
+}
+.current-serving > .current-serving-title {
+  display: block;
+  font-size: 23px;
+}
+.current-serving > .current-serving-footer {
+  font-size: 30px;
+  display: block;
+}
+.footer-logo {
+  text-align: center;
+  line-height: 130px
 }
