--- a/src/containers/css/style.css
+++ b/src/containers/css/style.css
@@ -23,6 +23,7 @@ body {
   border-radius: 25px;
   position: relative;
   padding-left: 15px;
+  min-height:800px;
   /* background-color: #000 */
 }
 .queue-container > .bookingList:first-child {
@@ -129,7 +130,6 @@ body {
 }
 #wrapper:fullscreen .queue-container {
   width:100%;
-  background-color: #000
 }
 
 .image-logo {
@@ -172,4 +172,18 @@ body {
 .footer-logo {
   text-align: center;
   line-height: 130px
+}
+#queue-group-list > .carousel-indicators {
+  bottom:-30px !important;
+  position: absolute !important;
+}
+#queue-group-list > .carousel-indicators > li {
+  /* content: "<div>hehe</div>" !important */
+  height: 16px;
+  width: 16px;
+  background-color: #C2C2C2;
+  border-radius: 50%;
+}
+#queue-group-list > .carousel-indicators > li.active {
+  background-color: #FF5F0F !important;
 }
