--- a/src/containers/css/style.css
+++ b/src/containers/css/style.css
@@ -85,7 +85,7 @@ body {
   background-color: #fff !important
 }
 .right-panel > .adsImage {
-  height: 72%;
+  height: 500px;
   width: 100%
 }
 #wrapper:fullscreen {
@@ -102,7 +102,7 @@ body {
   /* background-color: #000 */
 }
 #wrapper:fullscreen .right-panel > .adsImage {
-  height: 75%;
+  height: 800px;
   width: 100%
 }
 #wrapper:fullscreen .full-screen-btn{
